[gd_scene load_steps=6 format=3 uid="uid://ca7vwvmicgxpc"]

[ext_resource type="Theme" uid="uid://3ye6hjd7as3t" path="res://new_theme.tres" id="1_dicgw"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ph2id"]
[ext_resource type="Texture2D" uid="uid://cgbcputj0ults" path="res://2d/UI_filter.png" id="3_m0lic"]
[ext_resource type="AudioStream" uid="uid://dqsp0tx8ljfv2" path="res://Sound/menu.wav" id="3_oqghl"]
[ext_resource type="AudioStream" uid="uid://fcaahvkryv3o" path="res://Sound/ui_click_1.wav" id="5_mcus8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ph2id")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_dicgw")

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dicgw")
theme_type_variation = &"Header"
text = "Wilhelm of
Steamboat"
horizontal_alignment = 1

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dicgw")
text = "Play"

[node name="Credits" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dicgw")
text = "Credits"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dicgw")
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_oqghl")
autoplay = true
bus = &"Music"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_m0lic")
metadata/_edit_lock_ = true

[node name="UIHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mcus8")
volume_db = -6.442
pitch_scale = 1.11
bus = &"SFX"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
